# CMakeTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examplelib/: CMakeLists.txt
examplelib/include/examplelib/: core.h
examplelib/src/: core.cpp
examplelib/unittest/: CMakeLists.txt  testinfo.cpp
src/: main.cpp
